Improve stop button color and Mac desktop spacing
- Make stop button border and text brighter red (#ff5555)
- Move playback speed control up more on Mac (margin-top: -20px)
- Move start/stop/reset buttons up more on Mac (margin-top: -18px)

--- a/src/App.css
+++ b/src/App.css
@@ -277,7 +277,7 @@
   justify-content: center;
   width: 100%;
   max-width: 300px;
-  margin-top: -10px;
+  margin-top: -20px;
   margin-bottom: 30px;
 }
 
@@ -317,7 +317,7 @@
   gap: 20px;
   width: 100%;
   justify-content: center;
-  margin-top: -10px;
+  margin-top: -18px;
   margin-bottom: 30px;
 }
 
@@ -368,14 +368,14 @@
 
 .btn-stop {
   background: #000;
-  border-color: #ff3333;
-  color: #ff3333;
-  box-shadow: 4px 4px 0px #ff3333;
+  border-color: #ff5555;
+  color: #ff5555;
+  box-shadow: 4px 4px 0px #ff5555;
 }
 
 .btn-stop:hover:not(:disabled) {
   background: #1a0000;
-  box-shadow: 2px 2px 0px #ff3333;
+  box-shadow: 2px 2px 0px #ff5555;
 }
 
 .btn-reset {
